service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myflask
spec:
  type: NodePort
  selector:
    app: myflask
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
      nodePort: 30010
